@@ -70,6 +70,39 @@
 <!ATTLIST bean dependencyCheck (none|objects|simple|all) "none"> 
 
 
+<!--
+	Optional attribute controlling whether to "autowire"
+	bean properties. This is an automagical process in which bean references
+	don't need to be coded explicitly in the XML bean definition file,
+	but Spring works out dependencies.
+	
+	There are three modes:
+	
+	1. no
+	The traditional Spring default. No automagical wiring. Bean references
+	must be defined in the XML file via the <ref> element. We recommend this
+	in most cases as it makes documentation more explicit.
+	
+	2. byName
+	Autowiring by property name. If a bean of class Cat exposes a dog property,
+	Spring will try to set this to the value of the bean "dog" in the current
+	factory.
+	
+	3. byType
+	This is like the PicoContainer default, in which there must be exactly
+	one bean of the property type in the bean factory. If there are 0 or
+	more than one, a fatal error is raised, and you can't use byType autowiring for
+	that bean.
+	This makes bean factories simple to configure for small namespaces,
+	but doesn't work as well as standard Spring behaviour for
+	bigger applications.
+	
+	Autowire behaviour can be combined with dependency checking, which will
+	be performed after all auto wiring has been completed.
+-->
+<!ATTLIST bean autowire (no|byName|byType) "no"> 
+
+
 <!-- 
 	Optional attribute for the name of the custom initialization method
 	to invoke after setting bean properties. The method must have no arguments,
