@@ -1,0 +1,36 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE beans PUBLIC  "-//SPRING//DTD BEAN//EN" "http://www.springframework.org/dtd/spring-beans.dtd">
+
+<beans>
+
+	<bean id="rod1" class="org.springframework.beans.factory.xml.DependenciesBean"
+		autowire="byType"
+		dependencyCheck="objects"
+	>
+		<!-- Should pick up spouse automatically -->
+	</bean>
+	
+	<bean id="rod2" class="org.springframework.beans.factory.xml.DependenciesBean"
+		autowire="byName"
+		dependencyCheck="objects"
+	>
+		<!-- Should pick up spouse automatically -->
+	</bean>
+	
+	<bean id="spouse" class="org.springframework.beans.TestBean"
+>
+		<property name="name"><value>Kerry</value></property>
+	</bean>
+	
+	
+	<!--
+	<bean id="unsatisfiedAutoWireByType" class="org.springframework.beans.TestBean"
+		autowire="byType"
+		dependencyCheck="objects"
+	>
+	</bean>
+	-->
+	
+	
+
+</beans>
